# dbt-webshop-demo

./: .gitignore  Dockerfile  README.md  book.toml  k3d.yaml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: markdown.yml
dbt_demo/: profiles.yml
dbt_webshop_solution/: .user.yml  profiles.yml  pyproject.toml
dbt_webshop_solution/webshop/: dbt_project.yml
dbt_webshop_solution/webshop/models/mart/: dim_customer_orders.sql
dbt_webshop_solution/webshop/models/staging/: _models.yaml  stg_category.sql  stg_order.sql
dbt_webshop_solution/webshop/tests/: test_dim_customer_orders.sql
kubernetes/: namespaces.yaml
kubernetes/extract-load/: extract-load.yaml  secrets.yaml
kubernetes/pgadmin/: pgadmin-secrets.yaml  pgadmin.yaml
kubernetes/postgres/: postgres.yaml
scripts/: activate_env.sh  deploy.sh  docs_generate_and_serve.sh  run_build_dbt.sh  run_model_dbt.sh  run_snapshot_dbt.sh  schema.sql  serve_mdbook.sh
src/: 10_data_freshness.md  11_data_modeling.md  12_exercise_two.md  13_dbt_macros.md  14_testing_continued.md  15_dbt_packages.md  16_exercise_three.md  17_exercise_four.md  1_intention_of_book.md  2_sample_project.md  3_a_brief_history.md  4_what_is_dbt.md  5_getting_setup_with_dbt.md  6_dbt_models.md  7_documentation.md  8_generic_testing.md  9_exercise_one.md  SUMMARY.md
webshop_demo/: .user.yml  dbt_project.yml  profiles.yml
webshop_demo/macros/: generate_schema_name.sql
webshop_demo/snapshots/: stg_category__snapshot.sql
webshop_demo_solution/: packages.yml
webshop_demo_solution_newest/: .user.yml  dbt_project.yml  profiles.yml
(+68 files in other folders)
